# calc-cli

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: evaluate.h  postfix.h  queue.h  stack.h  tokenMat.h  tokenize.h
include/utils/: calcTypes.h  queue.h
src/: evaluate.c  postfix.c  queue.c  stack.c  tokenMat.c  tokenize.c
src/utils/: calcTypes.c  stack.c
